crates/perl-lsp-rs/tests/snapshots/pull_diagnostics_snapshots__diagnostic_data_missing_strict.snap
---
source: crates/perl-lsp-rs/tests/pull_diagnostics_snapshots.rs
expression: "format!(\"{:#}\", snapshot)"
---
{
  "category": "StrictWarnings",
  "code": "PL100",
  "fixable": true,
  "tags": []
}
