crates/perl-lsp-rs/tests/snapshots/pull_diagnostics_snapshots__diagnostic_data_parse_error.snap
---
source: crates/perl-lsp-rs/tests/pull_diagnostics_snapshots.rs
expression: "format!(\"{:#}\", snapshot)"
---
{
  "category": "Parser",
  "code": "PL001",
  "fixable": true,
  "tags": []
}
