crates/perl-lsp-rs/tests/snapshots/pull_diagnostics_snapshots__diagnostic_data_pl701.snap
---
source: crates/perl-lsp-rs/tests/pull_diagnostics_snapshots.rs
expression: "format!(\"{:#}\", snapshot)"
---
{
  "category": "Import",
  "code": "PL701",
  "fixable": false,
  "tags": []
}
