crates/perl-lsp-rs/tests/snapshots/pull_diagnostics_snapshots__pl701_with_include_paths.snap
---
source: crates/perl-lsp-rs/tests/pull_diagnostics_snapshots.rs
expression: format_diagnostic(pl701)
---
code: PL701
severity: Warning
message: Module 'Missing::Module::That::Does::Not::Exist' not found. Searched @INC: /test/path1, /test/path2. Add to lib path or install the module.
Suggestion: Install with: cpanm Missing::Module::That::Does::Not::Exist or add to .perl-lsp.toml: include_paths
source: Some("perl-lsp")
range: 0:0-0:43
tags: None
data: {
  "category": "Import",
  "code": "PL701",
  "fixable": false,
  "tags": []
}
related_information:
